add fake test clients
